<resources>
    <string name="app_name">Rest\'In</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCrRdxWk82ieR8U-oRXHOsxHnHXau4uGTg
    </string>
    <string name="filters">Filtres</string>
    <string name="trier">Trier par</string>
    <string name="qualite">Qualité minimum</string>
    <string name="distance">Distance en mètres</string>
    <string name="tempsAttente">Temps d\'attente en minutes</string>
    <string name="prix">Prix moyen en euros</string>
    <string name="title_activity_maps">Map</string>
</resources>
