<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="380dp"
    android:id="@+id/scroll_filter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:text="@string/prix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            tools:text="Prix moyen en euros" />

        <org.florescu.android.rangeseekbar.RangeSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:absoluteMaxValue="20"
            app:absoluteMinValue="0"
            app:valuesAboveThumbs="true"
            app:textAboveThumbsColor="@android:color/holo_red_dark"
            android:id="@+id/price_filter" />

        <TextView
            android:text="@string/tempsAttente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            tools:text="Temps d'attente en minutes" />

        <org.florescu.android.rangeseekbar.RangeSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:absoluteMaxValue="200"
            app:absoluteMinValue="1"
            app:valuesAboveThumbs="true"
            app:textAboveThumbsColor="@android:color/holo_red_dark"
            android:id="@+id/time_filter" />

        <TextView
            android:text="@string/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" />

        <org.florescu.android.rangeseekbar.RangeSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:absoluteMaxValue="5000"
            app:absoluteMinValue="0"
            app:valuesAboveThumbs="true"
            app:textAboveThumbsColor="@android:color/holo_red_dark"
            android:id="@+id/distance_filter" />

        <TextView
            android:text="@string/qualite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                android:numStars="5"
                android:stepSize="1"
                android:rating="0"
                android:clickable="false" />
        </LinearLayout>

        <TextView
            android:text="@string/trier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:entries="@array/sortChoices"
                android:layout_weight="1" />

            <Button
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:text="Défaut" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>